@@ -7,13 +7,34 @@
 # http://www.cybop.net
 # - Cybernetics Oriented Programming -
 #
-# @version $Revision: 1.41 $ $Date: 2008-05-04 00:18:09 $ $Author: christian $
+# @version $Revision: 1.42 $ $Date: 2008-05-04 22:34:38 $ $Author: christian $
 # @author Christian Heller <christian.heller@tuxtax.de>
 #
+
+    // The type "xmlChar" used by the libxml2 parser is a null-terminated sequence
+    // of utf-8 characters. And only utf-8! One needs to convert strings encoded in
+    // different ways to utf-8 before passing them to the libxml2 API.
+    // This can be accomplished with the "iconv" library, for instance.
+    //
+    // In order to use a null-terminated sequence of utf-8 characters (xmlChar),
+    // which represents a multi-byte character string, within CYBOI,
+    // it needs to be converted into a wide character array.
+    //
+    //?? TODO: CAUTION! The following assumption is not asserted yet!
+    // However, since CYBOL knowledge model files contain solely ASCII characters,
+    // there should be no problems with converting them to a character array
+    // or wide character array as done before in CYBOI, i.e. using the "decode" function.
+
 
         * Go through source code manually searching for potential bugs,
             after conversion to wide character
         * Replace function calls to "strlen" with "wcslen"
+        * Replace "char" with "wchar_t" wherever suitable
+        * Replace "CHARACTER_ARRAY" with "WIDE_CHARACTER_ARRAY"
+            (Mind the calls of "decode" in function "decode_compound_cybol_node",
+            since the conversion does not work anymore if changed to wide character!
+            Possibly, use "iconv" to create a wide character array out of the utf8 xmlChar array of libxml2!)
+        * Check where possibly to replace "encode_integer" with "encode_integer_wide"
         * Adapt "write" function call in module "logger.c" to wide character
         * Convert more source code modules (logger etc.) to wide character usage,
             since mixing wide- and narrow characters would cause problems at in-/ output
